# cursor-rules

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CURSOR_MCP_SETUP.md  DEMO_RESULTS.md  Dockerfile  FASTMCP_IMPROVEMENTS_SUMMARY.md  LIVE_METRICS_DASHBOARD.md  MCP_TOOLS_DOCUMENTATION.md  MCP_USAGE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TEST_IMPROVEMENTS_SUMMARY.md  debug_amazon_text.py  debug_invoice_processor.py  debug_llama31.py  debug_prompt_parsing.py  debug_raw_response.py  debug_stop_params.py  development-workflow-rule-with-refs.mdc  example_mcp_client.py  extract_invoice.py  fix_mypy_errors.py  get_metrics_direct.py  mcp-http.json  mcp-module.json  mcp.json  mcp_config_cursor.json  mcp_config_http.json  mypy.ini  pyproject.toml  simple_http_client.py  simple_mcp_server.py  test_all_mcp_commands.py  test_all_mcp_tools.py  test_amazon_factuur.py  test_comprehensive_comparison.py  (+30 more)
.cursor/: mcp.json
.cursor/rules/: actionable-insights-rule.mdc  auto-commit.mdc  command-rules.mdc  development-rule.mdc  development-workflow-rule.mdc  git-commit-rule.mdc  global-workflow.mdc  information-tracking-rule.mdc  init-project.mdc  init-specs.mdc  init-tasks.mdc  knowledge-management-rule.mdc  learning-refinement-rule.mdc  on-load-rule.mdc  project-onboarding-rule.mdc  request-specs-rule.mdc  spec-validation-rule.mdc  specs-definition.mdc  testing-rule.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: tasks-definition.md  tools-and-libs.prompt.md
.github/prompts/commands/: init-project.prompt.md  init-specs.prompt.md  init-tasks.prompt.md
.github/prompts/definitions/: specs.prompt.md  tasks.prompt.md
src/: main.cpp
src/mcp_invoice_processor/: __init__.py  __init__.pyi  __main__.py  config.py  fastmcp_http_server.py  fastmcp_server.py  fastmcp_server.pyi  http_server.py  logging_config.py  main.py  py.typed  tools.py
src/mcp_invoice_processor/monitoring/: dashboard.py  metrics.py
src/mcp_invoice_processor/processing/: __init__.py  chunking.py  classification.py  classification.pyi  merging.py  models.py  pipeline.py  text_extractor.py
src/mcp_invoice_processor/processors/: __init__.py  base.py  registry.py
src/mcp_invoice_processor/processors/cv/: __init__.py  models.py  processor.py  prompts.py
src/mcp_invoice_processor/processors/invoice/: __init__.py  models.py  processor.py  prompts.py
test_documents/: sample_cv.txt  sample_invoice.txt
tests/: README.md  TEST_MIGRATION_GUIDE.md  __init__.py  conftest.py  legacy_tests  migrate_legacy_tests.py  report.html  results.xml  run_tests.py  test_all_mcp_commands.py  test_all_mcp_tools.py  test_amazon_factuur.py  test_chunking_comprehensive.py  test_comprehensive_comparison.py  test_cursor_mcp.py  test_deprecation_warning_fix.py  test_dynamic_documentation.py  test_dynamic_processing_guide.py  test_dynamic_processor_tools.py  test_error_analysis.py  test_factuur.txt  test_factuur_tekst.py  test_fastmcp_cli.py  test_fastmcp_client.py  test_fastmcp_direct.py  test_fastmcp_integration.py  test_fastmcp_server.py  test_fastmcp_server_run.py  test_fastmcp_syntax.py  test_final_validation.py  test_improved_extraction.py  test_improved_logging.py  test_json_schema_extraction.py  test_mcp_client.py  test_mcp_client_backup.py  test_mcp_server_direct.py  test_mcp_server_logging.py  test_metrics_generation.py  test_metrics_generation_backup.py  test_model_parameter_comprehensive.py  (+9 more)
tests/legacy_tests/: README.md  test_comprehensive_comparison.py  test_debug_json_schema.py  test_factuur_tekst.py  test_hybrid_mode.py  test_mcp_server.py  test_mcp_tools_detailed.py  test_mcp_tools_simple.py  test_ollama_integration.py
