[project]
name = "mcp-invoice-processor"
version = "0.1.0"
description = "Een FastMCP server voor het extraheren van gestructureerde data uit PDF-documenten."
authors = [{ name = "Uw Naam", email = "uw.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastmcp>=2.2.1",
    "ollama>=0.2.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "pymupdf>=1.24.1",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "langchain-text-splitters>=0.2.0",
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.4",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
