[project]
name = "mcp-invoice-processor"
version = "0.1.0"
description = "Een FastMCP server voor het extraheren van gestructureerde data uit PDF-documenten."
authors = [{ name = "Uw Naam", email = "uw.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ollama>=0.2.1",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "pymupdf>=1.24.1",
    "python-dotenv>=1.0.1",
    "python-json-logger>=3.0.0",
    "langchain-text-splitters>=0.2.0",
    "rapidfuzz>=3.9.0",
    "pytest>=8.4.1",
    "mcp[cli]>=1.13.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "fastmcp>=2.12.4",
    "mypy>=1.18.2",
    "mypy-extensions>=1.1.0",
    "types-pyyaml>=6.0.12.20250915",
]

[project.scripts]
# MCP Servers
mcp-server = "mcp_invoice_processor.fastmcp_server:run_server"
mcp-http-server = "mcp_invoice_processor.fastmcp_http_server:run_http_server"
mcp-http-server-async = "mcp_invoice_processor.http_server:run_http_server"

# MCP Client Demos
mcp-client-demo = "example_mcp_client:main"
mcp-http-client = "simple_http_client:test_http_mcp_client"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
extend-ignore = ["ANN401"]  # Ignore missing type stubs for external modules

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
addopts = "--asyncio-mode=auto"
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten:pytest.PytestAssertRewriteWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped defs for now
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # Allow untyped decorators for now
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Module resolution
explicit_package_bases = true
namespace_packages = true

# Ignore missing type stubs for external modules
ignore_missing_imports = true

# Add source directory to Python path
mypy_path = ["src"]

# Per-module options
[[tool.mypy.overrides]]
module = "mcp_invoice_processor.*"
ignore_missing_imports = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "mcp>=1.13.1",
    "ollama>=0.5.3",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.1",
    "python-json-logger>=3.3.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20250809",
]
